# FastPAI

./: .gitignore  README.md  docker-compose.yml  main.py  prefettura.py  pyproject.toml  rag.py  requirements.txt
api/: prefettura.py
backend/: Dockerfile  init_db.py  main.py  requirements.txt
backend/chroma_data/: chroma.sqlite3
backend/documents/: BA_cambio_residenza.json  BA_carta_identita.json  BA_casellario_giudiziale.json  BA_passaporto.json  BA_tessera_elettorale.json  NA_cambio_residenza.json  NA_carta_indentita.json  NA_casellario_giudiziale.json  NA_passaporto.json  NA_tessera_elettorale.json  RM_cambio_residenza.json  RM_carta_identita.json  RM_casellario_giudiziale.json  RM_passaporto.json  RM_porto_armi.json  RM_tessera_elettorale.json
backend/rag/: chain.py  response.py  vec_db.py
backend/rag/chroma_data/: chroma.sqlite3
backend/rag/documents/: BA_carta_identita.json  BA_casellario_giudiziale.json  NA_carta_indentita.json  NA_casellario_giudiziale.json  RM_porto_armi.json
chroma_data/: chroma.sqlite3
frontend/: Dockerfile  Home.py  index.html  package.json  requirements.txt  vite.config.js
frontend/pages/: 01_Chat.py
frontend/public/: manifest.json
frontend/src/: App.css  App.jsx  App.tsx  Chat.tsx
frontend/src/components/CompleteHeader/: CenterHeader.tsx  CompleteHeader.tsx  (+1 more)
frontend/styles/: shared.py
rag/: chain.py  main.py  rag.py  vec_db.py
rag/chroma_data/: chroma.sqlite3
rag/documents/: BA_casellario_giudiziale.json  NA_passaporto.json  RM_carta_identita.json  RM_casellario_giudiziale.json  RM_passaporto.json
